--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
 		.stThuchien{background-color: #109618; color: #fff; opacity: 0.75}
 		.stChoduyetHoanthanh{background-color: #02a99a; color: #fff; opacity: 0.9}
 		.stChoduyetTamdung{background-color: #f5c043; color: #000; opacity: 0.9}
+		.stTuchoiYeucau{background-color: #e91b86; color: #fff; opacity: 0.75}
 		.stHoanthanh{background-color: #3366cc; color: #fff; opacity: 0.75}
 		.stQuahan{background-color: #dc3912; color: #fff; opacity: 0.75}
 		.stKetthuc{background-color: #855e58; color: #fff; opacity: 0.75}
@@ -274,7 +275,23 @@
 					Array.from(this.table.getElementsByClassName('solieuTableData')).map((el,elIdx)=>{el.innerHTML=dataTbl[elIdx]});
 					drawChart(0,dataTbl);
 				}
-
+				statisticLoading=(cvList)=>{
+					var idx={dangthuchien:1,tamdung:2,hoanthanh:3,quahan:4,choduyetHoanthanh:5,choduyetTamdung:6};
+					var statisticalTbl = cvList.reduce((out,item)=>{
+						if(item.tinhtrang.search(/thực hiện/gi)>-1) out[idx.dangthuchien]++;
+						var testHoanthanh = item.tinhtrang.search(/hoàn thành/gi)>-1, testTamdung = item.tinhtrang.search(/tạm dừng/gi)>-1;
+						if(testHoanthanh) out[idx.hoanthanh]++; if(testTamdung) out[idx.tamdung]++;
+						var testChoDuyet = item.tinhtrang.search(/chờ duyệt/gi)>-1, testTuchoi = item.tinhtrang.search(/Từ chối yêu cầu/gi)>-1;
+						if(testHoanthanh&&testChoDuyet) {out[idx.hoanthanh]--;out[idx.choduyetHoanthanh]++;}
+						if(testTamdung&&testChoDuyet) {out[idx.tamdung]--;out[idx.choduyetTamdung]++;}
+						if(testHoanthanh&&testTuchoi) out[idx.hoanthanh]--;
+						if(testTamdung&&testTuchoi) out[idx.tamdung]--;
+						var fDue=item.giaoviec.thoihan.full.split('/'), deltaTime=new Date()-new Date(fDue[2],fDue[1]-1,parseInt(fDue[0])+1);
+						if(deltaTime>0) out[idx.quahan]++;
+						return out;
+					},[cvList.length,0,0,0,0,0,0]);
+					obSolieu.setStats(statisticalTbl);
+				}
 				
 			</script>
 
@@ -321,25 +338,75 @@
 				addListDulieu=(items)=>{items.forEach((item,itemIdx)=>addItemDulieu(item,itemIdx));}
 				addItemDulieu=(item,index)=>{
 					var elmTags=tagAnalysis(item);
-					var elmExtend=item.thuchien.ok.length>0?(
+					var thuchienPheduyetOkCode = item.thuchien.pheduyet.ok, tamdungPheduyetOkCode = item.tamdung.pheduyet.ok;
+					var thuchienOk=item.thuchien.ok.length>0,thuchienPheduyetOk=(item.thuchien.pheduyet.ok.length>0&&thuchienPheduyetOkCode>0);
+					var tamdungOk=item.tamdung.ok.length>0,tamdungPheduyetOk=(item.tamdung.pheduyet.ok.length>0&&tamdungPheduyetOkCode>0);
+					var elmExtend=thuchienOk>0?(
 						`<div class="w3-col s12 m6"><p class="pLR7px"></p><h4><b>Thực hiện</b></h4><p><b>Người thực hiện: </b>${item.thuchien.nguoithuchien.hoten}</p>
 						<p><b>Ngày hoàn thành: </b>${item.thuchien.ngayhoanthanh.full}</p>
 						<p><b>Kết quả thực hiện: </b></p><p>${item.thuchien.ketqua.split('\n').join('</p><p>')}</p></div>`
-					+(item.thuchien.pheduyet.ok.length>0?
+					+((thuchienPheduyetOk>0)?
 						`<div class="w3-col s12 m6"><p class="pLR7px"></p><h4><b>Phê duyệt Hoàn thành:</b></h4><p>
 						<p><b>Người phê duyệt: </b>${item.thuchien.pheduyet.nguoipheduyet.hoten}</p>
 						<p><b>Ngày phê duyệt: </b>${item.thuchien.pheduyet.ngaypheduyet.full}</p>
-						<p><b>Nội dung: </b></p><p>${item.thuchien.pheduyet.noidung.split('\n').join('</p><p>')}</p></div>`:'')):'';
-					elmExtend+=item.tamdung.ok.length>0?(
+						<p><b>Nội dung: </b> Kết quả ${thuchienPheduyetOkCode==2?'không':'đã'} được phê duyệt </p>
+						<p>${item.thuchien.pheduyet.noidung.split('\n').join('</p><p>')}</p></div>`:'')):'';
+					elmExtend+=tamdungOk?(
 						`<div class="w3-col s12 m6"><p class="pLR7px"></p><h4><b>Tạm dừng</b></h4><p><b>Người xin tạm dừng: </b>${item.tamdung.nguoixintamdung.hoten}</p>
 						<p><b>Ngày xin tạm dừng: </b>${item.tamdung.ngayxintamdung.full}</p>
 						<p><b>Lý do tạm dừng: </b></p><p>${item.tamdung.lydo.split('\n').join('</p><p>')}</p></div>`
-					+(item.tamdung.pheduyet.ok.length>0?
+					+((tamdungPheduyetOk)?
 						`<div class="w3-col s12 m6"><p class="pLR7px"></p><h4><b>Phê duyệt Tạm dừng:</b></h4><p>
 						<p><b>Người phê duyệt: </b>${item.tamdung.pheduyet.nguoipheduyet.hoten}</p>
 						<p><b>Ngày phê duyệt: </b>${item.tamdung.pheduyet.ngaypheduyet.full}</p>
-						<p><b>Nội dung: </b></p><p>${item.tamdung.pheduyet.noidung.split('\n').join('</p><p>')}</p></div>`:'')):'';
-
+						<p><b>Nội dung: </b> Yêu cầu tạm dừng ${tamdungPheduyetOkCode==2?'không':'đã'} được phê duyệt </p>
+						<p>${item.tamdung.pheduyet.noidung.split('\n').join('</p><p>')}</p></div>`:'')):'';
+					var stateBtns=
+					`<div class="w3-cell-row">
+						<div class="w3-cell w3-center" ><button class="w3-button w3-blue w95" onclick="logF(itemStateSelected,{elm:this,state:2});">Hoàn thành</button></div>
+						<div class="w3-cell w3-center"><button class="w3-button w3-orange w95" onclick="logF(itemStateSelected,{elm:this,state:3});">Tạm dừng</button></div>
+					</div>
+					<div class="hidden">
+						<form class="w3-row hidden hoanthanhForm">
+							<div class="w3-col s8"><label>Người thực hiện</label><input type="text" name="idNguoithuchien${index}"></div>
+							<div class="w3-col s11"><label>Kết quả thực hiện</label><textarea class="materialize-textarea" name="idKetquathuchien${index}"></textarea></div>
+							<div class="w3-cell-row">
+							<div class="w3-cell w3-center"><button class="w3-button w3-theme pheduyet" onclick="logF(dataSubmitTask,{elm:this,index:${index},state:0})" type="button">Gửi đi phê duyệt</button></div></div>
+						</form>
+						<form class="w3-row hidden tamdungForm">
+							<div class="w3-col s8"><label>Người xin tạm dừng</label><input type="text" name="idNguoitamdung${index}"></div>
+							<div class="w3-col s11"><label>Lý do tạm dừng</label><textarea class="materialize-textarea" name="idLydotamdung${index}"></textarea></div>
+							<div class="w3-cell-row">
+							<div class="w3-cell w3-center"><button class="w3-button w3-theme pheduyet" onclick="logF(dataSubmitTask,{elm:this,index:${index},state:1})" type="button">Gửi đi phê duyệt</button></div></div>
+						</form>
+					</div>`;
+					var source=thuchienOk?'thuchien':'tamdung', btnStateColor=thuchienOk?'w3-blue':'w3-orange', stateTx=thuchienOk?'hoàn thành':'tạm dừng';
+					var pheduyetBtns=
+					`<div class="w3-cell-row">
+						<div class="w3-cell w3-center" ><button class="w3-button w3-gray w95" onclick="logF(itemStateSelected,{elm:this,state:2});">Không duyệt ${stateTx}</button></div>
+						<div class="w3-cell w3-center"><button class="w3-button ${btnStateColor} w95" onclick="logF(itemStateSelected,{elm:this,state:3});">Phê Duyệt ${stateTx}</button></div>
+					</div>
+					<div class="hidden">
+						<form class="w3-row hidden">
+							<div class="w3-col s8"><label>Người phê duyệt</label><input type="text" name="idNguoikhongphe${index}"></div>
+							<div class="w3-col s11"><label>Vấn đề còn tồn tại</label><textarea class="materialize-textarea" name="idNoidungkophe${index}"></textarea></div>
+							<div class="w3-cell-row">
+							<div class="w3-cell w3-center"><button class="w3-button ${btnStateColor} pheduyet" onclick="logF(dataConfirmTask,{elm:this,index:${index},state:0,source:'${source}'})" type="button">Xác nhận</button></div></div>
+						</form>
+						<form class="w3-row hidden">
+							<div class="w3-col s8"><label>Người phê duyệt</label><input type="text" name="idNguoipheduyet${index}"></div>
+							<div class="w3-col s11"><label>Nội dung phê duyệt</label><textarea class="materialize-textarea" name="idNoidungphe${index}"></textarea></div>
+							<div class="w3-cell-row">
+							<div class="w3-cell w3-center"><button class="w3-button ${btnStateColor} pheduyet" onclick="logF(dataConfirmTask,{elm:this,index:${index},state:1,source:'${source}'})" type="button">Xác nhận</button></div></div>
+						</form>
+					</div>`;
+					var tieptucBtns=
+					`<div class="w3-cell-row">
+						<div class="w3-cell w3-center"><button class="w3-button w3-theme w97 pheduyet" onclick="logF(dataResumeTask,{elm:this,index:${index},source:'${source}'});">Tiếp tục Công việc</button></div>
+					</div>
+					`;
+					var stateExtend=(thuchienOk>0?(thuchienPheduyetOk>0?tieptucBtns:pheduyetBtns):
+						(tamdungOk>0?(tamdungPheduyetOk>0?tieptucBtns:pheduyetBtns):stateBtns));
 					var elmItem=`<li class="classMainListItem">
 						<div class="pLR15px collapsible-header" >
 							<div class="w3-cell-row">
@@ -375,7 +442,7 @@
 							</div>
 							<div class="w3-row fullw">${elmExtend}</div>
 							<div class="w3-cell-row bot10p">
-								<div class="w3-cell w3-center" ><button class="w3-button w3-green w95" type="button" onclick="logF(taskContentEditToggle,{elm:this,index:${index}})">Sửa nội dung</button></div>
+								<div class="w3-cell w3-center" ><button class="w3-button w3-green w97" type="button" onclick="logF(taskContentEditToggle,{elm:this,index:${index}})">Sửa nội dung Giao việc</button></div>
 							</div>
 							<form class="w3-row hidden" name="idGiaoviecForm${index}" id="idGiaoviecForm${index}">
 								<div class="w3-col s12 m4 w3-container">
@@ -398,37 +465,26 @@
 								</div>
 							</form>
 							<hr>
-							<div class="w3-cell-row">
-								<div class="w3-cell w3-center" ><button class="w3-button w3-blue w95" onclick="logF(itemStateSelected,{elm:this,state:2});">Hoàn thành</button></div>
-								<div class="w3-cell w3-center"><button class="w3-button w3-orange w95" onclick="logF(itemStateSelected,{elm:this,state:3});">Tạm dừng</button></div>
-							</div>
-							<div class="hidden">
-								<form class="w3-row hidden hoanthanhForm">
-									<div class="w3-col s8"><label>Người thực hiện</label><input type="text" class="nguoithuchien"></div>
-									<div class="w3-col s11"><label>Kết quả thực hiện</label><textarea class="materialize-textarea ketquathuchien"></textarea><label> <input type="checkbox" class="filled-in" checked="checked" /> <span>Hoàn thành toàn bộ</span> </label></div>
-									<div class="w3-col s11"><label>Ghi chú</label><textarea class="materialize-textarea ghichu"></textarea></div>
-									<div class="w3-cell-row">
-										<div class="w3-cell w3-center"><button class="w3-button w3-theme" onclick="logF(dataSubmitTask,{index:0,state:0})" type="button">Gửi đi phê duyệt</button></div></div>
-								</form>
-								<form class="w3-row hidden tamdungForm">
-										<div class="w3-col s11"><label>Lý do tạm dừng</label><textarea class="materialize-textarea lydotamdung"></textarea></div>
-										<div class="w3-cell-row">
-											<div class="w3-cell w3-center"><button class="w3-button w3-theme" onclick="logF(dataSubmitTask,{index:0,state:1}" type="button">Gửi đi phê duyệt</button></div></div>
-								</form>
-							</div>
+							${stateExtend}
 						</div>
 					</li>`;
 					obDulieu.plus.insertAdjacentHTML('afterend',elmItem);
 				}
 				tagAnalysis=(item)=>{
 					var tempTags={};
+					if(item.tinhtrang.search(/Từ chối yêu cầu/gi)>-1) tempTags.stTuchoiYeucau="Từ chối yêu cầu";
 					if(item.tinhtrang.search(/thực hiện/gi)>-1) tempTags.stThuchien="Đang thực hiện";
 					if(item.tinhtrang.search(/hoàn thành/gi)>-1) tempTags.stHoanthanh="Hoàn thành";
 					if(item.tinhtrang.search(/tạm dừng/gi)>-1) tempTags.stTamdung="Tạm dừng";
 					if(tempTags.stHoanthanh&&item.tinhtrang.search(/chờ duyệt/gi)>-1) tempTags.stChoduyetHoanthanh="Chờ duyệt";
 					if(tempTags.stTamdung&&item.tinhtrang.search(/chờ duyệt/gi)>-1) tempTags.stChoduyetTamdung="Chờ duyệt";
-					if(item.tinhtrang.search(/quá hạn/gi)>-1) tempTags.stQuahan="Quá hạn";
-					if(item.giaoviec.thoihan.full==formatDateForId(new Date(),1)) tempTags.stHethan="Hết hạn hôm nay";
+
+					if(tempTags.stHoanthanh!="Hoàn thành"){
+						var fDue=item.giaoviec.thoihan.full.split('/'), deltaTime=new Date()-new Date(fDue[2],fDue[1]-1,parseInt(fDue[0])+1);
+						if(deltaTime>0) tempTags.stQuahan="Quá hạn";
+						if(item.giaoviec.thoihan.full==formatDateForId(new Date(),1)) tempTags.stHethan="Hết hạn hôm nay";
+					}
+
 					tempTags.stBatdau="Từ "+item.giaoviec.ngaygiao.short;
 					if(item.giaoviec.thoihan.short.length>0) tempTags.stKetthuc="Đến "+item.giaoviec.thoihan.short;
 					if(item.giaoviec.ngaygiao.full==formatDateForId(new Date(),1)) tempTags.stMoi="Mới";
@@ -466,7 +522,7 @@
 	</script>
 	<script description="dataProcess">
 		dataToMem=()=>{
-			var url=`${appscriptConfig.workUrl}?action=getList&email=${mainData.user.email}&uid=${mainData.user.uid}&hash=${mainData.hash}`;
+				var url=`${appscriptConfig.workUrl}?action=getList&email=${mainData.user.email}&uid=${mainData.user.uid}&hash=${mainData.hash}`;
 		  	logE('getList:'+url);logF(overlayAppear);
 		  	callGasApi(url,true).then(gasApiCb).then(response=>{// merge data + main.user
 		      logE('getList Ok:');
@@ -478,7 +534,7 @@
 		      	mainData.congviecList=values; 
 		      logE('AddOne:'+response.addOne);
 		      logF(memToUi);logF(overlayDisappear);
-		      obSolieu.setStats([22,10,2,2,0,0,1]);
+		      statisticLoading(mainData.congviecList);
 		    },(er)=>alertEr('GasApiError',er));
 		}
 		
@@ -510,6 +566,7 @@
 		      }
 		      logF(dataToMem);
 		      p.elm.disabled=false;
+		      ['idNguoigiao','idPhutrach','idNgayYeucau','idTencongviec','idNoidungchitiet'].forEach((k,idx)=>p.elm.form[k+ext].value = '');
 		    },(er)=>{alertEr('GasApiError',er);p.elm.disabled=false;});
 		}
 		taskContentSetUI=(p)=>{
@@ -519,11 +576,70 @@
 			['idNguoigiao','idPhutrach','idNgayYeucau'].forEach((k,idx)=>{p.elm[k+p.index].value=gv[idx]});
 			['idTencongviec','idNoidungchitiet'].forEach((k,idx)=>{p.elm[k+p.index].value=item.noidung[noidungKey[idx]]});
 		}
-		dataSubmitTask=(p)=>{alert(p.index);}
+		dataSubmitTask=(p)=>{
+			var temp = [],ext = p.index, keySelect=p.state==0?['idNguoithuchien','idKetquathuchien']:['idNguoitamdung','idLydotamdung'];
+			keySelect.forEach((k,idx)=>{temp[idx]=p.elm.form[k+ext].value});
+			
+			Array.from(document.getElementsByClassName('pheduyet')).forEach((submitBtn)=>{submitBtn.disabled=true});
+			var thuchienData=()=>({thuchien:{ok:1,ngayhoanthanh:getDateJSON(formatDateForId(new Date(),1)),nguoithuchien:getPeopleJSON(temp[0]),ketqua:temp[1],pheduyet:{ok:0}},tinhtrang:'Hoàn thành, Chờ duyệt'})
+			var tamdungData=()=>({tamdung:{ok:1,ngayxintamdung:getDateJSON(formatDateForId(new Date(),1)),nguoixintamdung:getPeopleJSON(temp[0]),lydo:temp[1],pheduyet:{ok:0}},tinhtrang:'Tạm dừng, Chờ duyệt'})
+			var queryData=p.state==0?thuchienData():tamdungData();
+			var pos = p.index+3;
+			
+			logE(queryData);
+			var url=`${appscriptConfig.workUrl}?action=edit&email=${mainData.user.email}&uid=${mainData.user.uid}&pos=${pos}&unit=${JSON.stringify(queryData)}`;
+		  	logE('Submit:'+url);
+		  	callGasApi(url,true).then(gasApiCb).then(response=>{// merge data + main.user
+		      switch(response.action) {
+		      	case 'edit': alert('Đã báo cáo xong!');break;
+		      	default: alert('Không xác định công việc, debug:'+JSON.stringify(response));
+		      }
+		      logF(dataToMem);
+		    },(er)=>{alertEr('GasApiError',er);p.elm.disabled=false;});
+		}
+		dataConfirmTask=(p)=>{
+			var temp = [],ext = p.index, keySelect=p.state==0?['idNguoikhongphe','idNoidungkophe']:['idNguoipheduyet','idNoidungphe'];
+			keySelect.forEach((k,idx)=>{temp[idx]=p.elm.form[k+ext].value});
+			
+			Array.from(document.getElementsByClassName('pheduyet')).forEach((submitBtn)=>{submitBtn.disabled=true});
+			var pheduyetData={ok:(2-p.state),ngaypheduyet:getDateJSON(formatDateForId(new Date(),1)),nguoipheduyet:getPeopleJSON(temp[0]),noidung:temp[1]};
+			var tinhtrang=(pheduyetData.ok==2?'Từ chối yêu cầu,':'')+(p.source=='thuchien'?'Hoàn thành':'Tạm dừng');
+			var queryData={}; queryData[p.source]={pheduyet:pheduyetData}; queryData.tinhtrang=tinhtrang;
+			var pos = p.index+3;
 
+			logE(queryData);
+			var url=`${appscriptConfig.workUrl}?action=edit&email=${mainData.user.email}&uid=${mainData.user.uid}&pos=${pos}&unit=${JSON.stringify(queryData)}`;
+		  	logE('Confirm:'+url);
+		  	callGasApi(url,true).then(gasApiCb).then(response=>{// merge data + main.user
+		      switch(response.action) {
+		      	case 'edit': alert('Đã phê duyệt xong!');break;
+		      	default: alert('Không xác định công việc, debug:'+JSON.stringify(response));
+		      }
+		      logF(dataToMem);
+		    },(er)=>{alertEr('GasApiError',er);p.elm.disabled=false;});
+		}
+		dataResumeTask=(p)=>{
+			var thuchienData=()=>({tinhtrang:'Đang thực hiện',thuchien:{ok:'',ngayhoanthanh:getDateJSON(''),nguoithuchien:getPeopleJSON(''),ketqua:''}})
+			var tamdungData=()=>({tinhtrang:'Đang thực hiện',tamdung:{ok:'',ngayxintamdung:getDateJSON(''),nguoixintamdung:getPeopleJSON(''),lydo:''}})
+			var pheduyetData={ok:'',ngaypheduyet:getDateJSON(''),nguoipheduyet:getPeopleJSON(''),noidung:''};
+			var queryData=(p.source=='thuchien')?thuchienData():tamdungData();queryData[p.source].pheduyet=pheduyetData;
+			var pos = p.index+3;
+
+			Array.from(document.getElementsByClassName('pheduyet')).forEach((submitBtn)=>{submitBtn.disabled=true});
+			var url=`${appscriptConfig.workUrl}?action=edit&email=${mainData.user.email}&uid=${mainData.user.uid}&pos=${pos}&unit=${JSON.stringify(queryData)}`;
+		  	logE('Resume:'+url);
+		  	callGasApi(url,true).then(gasApiCb).then(response=>{// merge data + main.user
+		      switch(response.action) {
+		      	case 'edit': alert('Đã báo tiếp tục công việc!');break;
+		      	default: alert('Không xác định công việc, debug:'+JSON.stringify(response));
+		      }
+		      logF(dataToMem);
+		    },(er)=>{alertEr('GasApiError',er);p.elm.disabled=false;});
+		}
 		// solieu add data
 
 		// ban do add data
+
 	</script>
 	<script description="dataPrototype">
 		User=(p)=>{var thisOb=this;['ten','email','acvId','uid','rowIndex','chucdanh','donvi','maquyen'].forEach((k)=>{thisOb[k]=p[k]});}
