--- a/public/index.html
+++ b/public/index.html
@@ -126,8 +126,9 @@
 	</div>
 	<script description="overlaySidebar">
 	var obSidebar = {data:[
-		{n:'Thông dụng',i:['Công việc của tôi']},
-		{n:'Đơn vị',i:['Thiết bị Thông tin Dẫn đường','Cơ điện đèn','Bảo trì sân đường','Môi trường khu bay','Văn phòng']},
+		{n:'Thông dụng',i:['Công việc của tôi','Liên quan tới tôi','Đơn vị của tôi','Công việc trung tâm'],c:['mine','related','mygroup']},
+		{n:'Đơn vị',i:['Thiết bị Thông tin Dẫn đường','Cơ điện đèn','Bảo trì sân đường','Môi trường khu bay','Văn phòng'],
+			c:['TBTTDD','CDD','BTSD','MTKB','VPKB']},
 		{n:'Dự án',i:['Cải tạo đường lăn S1','Bảo trì ILS/DME','Bảo trì hệ thống Trunking']}]};
 
 	const domKList=['idSidebar','idSidebarSearch','idSidebarUserPanel','idSidebarContent','idUserName','idUserSubName',
@@ -267,7 +268,18 @@
 				</div>
 			</div>
 			<script description="chartControl">
-				//TODO:move to here later
+				var chartApiReady = false, chart=null;
+				var chartData=[['Tình trạng', 'Số lượng'],['Đang thực hiện', 0],['Tạm dừng', 0],['Hoàn thành', 0],['Quá hạn', 0],['Chờ duyệt hoàn thành', 0],['Chờ duyệt tạm dừng', 0]];
+
+				// Draw the chart and set the chart values
+				drawChart=(noLegend,inData)=>{ // bug: xong data thi sua chart voi nolegend
+					if(!chartApiReady){console.warn('chartApi is not ready');return;} if(inData) inData.map((val,idx)=>{if(idx>0)chartData[idx][1]=val});
+
+					var data = google.visualization.arrayToDataTable(chartData);
+					var options = {chartArea:{width:'100%',height:'75%'},height:150,colors:['#109618','#ff9900','#3366cc','#dc3912','#02a99a','#f5c043'],legend:noLegend?'none':{textStyle:{fontSize:10}}};
+					(chart = chart?chart:new google.visualization.PieChart(document.getElementById('piechart'))).draw(data, options);
+				}
+
 				var obSolieu={};
 				initSolieu=()=>{initElm(obSolieu,['no','percent','bar','table'],['idSolieuNo','idSolieuPercent','idSolieuBar','idSolieuTable']);}
 				obSolieu.setStats=function(dataTbl){
@@ -518,7 +530,7 @@
 		mainPopulateContent=(p)=>{setMainTitle(p);setMainList();setMainSolieu();}
 		setMainTitle=(p)=>{obMain.tieude.children[0].innerHTML=obSidebar.data[p.g].i[p.i]};
 		setMainList=()=>{};
-		setMainSolieu=()=>{drawChart()};//bug here When sidebarItem selected
+		setMainSolieu=()=>{drawChart(NoLegend)};//bug here When sidebarItem selected
 	</script>
 	<script description="dataProcess">
 		dataToMem=()=>{
