--- a/public/index.html
+++ b/public/index.html
@@ -330,6 +330,9 @@
 									<label for="idNgayYeucau">Ngày yêu cầu hoàn thành</label><input type="date" name="idNgayYeucau">
 								</div>
 								<div class="w3-col s12 w3-container">
+									<label for="idDuan">Thuộc dự án</label><input type="text" name="idDuan">
+								</div>
+								<div class="w3-col s12 w3-container">
 									<label for="idTencongviec">Tên công việc</label><input type="text" name="idTencongviec">
 								</div>
 								<div class="w3-col s12 w3-container">
@@ -441,6 +444,7 @@
 									<p><b>Người giao: </b>${item.giaoviec.nguoigiao.hoten}</p>
 									<p><b>Người phụ trách: </b>${item.giaoviec.chutri.hoten}</p>
 									<p><b>Yêu cầu hoàn thành: </b>${item.giaoviec.thoihan.full}</p>
+									${item.giaoviec.duan.length>0?`<p><b>Thuộc dựa án: </b>${item.giaoviec.duan}</p>`:''}
 									<p><b>Nội dung chi tiết:</b></p>
 									<p>${item.noidung.daydu.split('\n').join('</p><p>')}</p>
 								</div>
@@ -449,6 +453,7 @@
 									<p><b>Người giao: </b>${item.giaoviec.nguoigiao.hoten}</p>
 									<p><b>Người phụ trách: </b>${item.giaoviec.chutri.hoten}</p>
 									<p><b>Yêu cầu hoàn thành: </b>${item.giaoviec.thoihan.full}</p>
+									${item.giaoviec.duan.length>0?`<p><b>Thuộc dựa án: </b>${item.giaoviec.duan}</p>`:''}
 									<p><b>Nội dung chi tiết:</b></p>
 									<p>${item.noidung.daydu.split('\n').join('</p><p>')}</p>
 								</div>
@@ -470,6 +475,9 @@
 								</div>
 								<div class="w3-col s8 m4 w3-container">
 									<label for="idNgayYeucau${index}">Ngày yêu cầu hoàn thành</label><input type="date" name="idNgayYeucau${index}">
+								</div>
+								<div class="w3-col s12 w3-container">
+									<label for="idDuan${index}">Thuộc dự án</label><input type="text" name="idDuan${index}">
 								</div>
 								<div class="w3-col s12 w3-container">
 									<label for="idTencongviec${index}">Tên công việc</label><input type="text" name="idTencongviec${index}">
@@ -585,10 +593,10 @@
 			p.elm.disabled=true;
 			var ext=p.index==-1?'':p.index, action=p.index==-1?'create':'edit', pos=p.index+3;
 			var temp = [];
-			['idNguoigiao','idPhutrach','idNgayYeucau','idTencongviec','idNoidungchitiet'].forEach((k,idx)=>temp[idx]=p.elm.form[k+ext].value);
+			['idNguoigiao','idPhutrach','idNgayYeucau','idDuan','idTencongviec','idNoidungchitiet'].forEach((k,idx)=>temp[idx]=p.elm.form[k+ext].value);
 			var ngaygiao=formatDateForId(new Date(),1), thoihan=formatFormDate(temp[2].split('-'),1);
-
-			var queryData={timestamp:ngaygiao,id:{},giaoviec:{ngaygiao:getDateJSON(ngaygiao),nguoigiao:getPeopleJSON(temp[0]),chutri:getPeopleJSON(temp[1]),thoihan:getDateJSON(thoihan)} ,tinhtrang:"Đang thực hiện",noidung:{tomtat:temp[3],daydu:temp[4]}};
+			logE(thoihan+' - '+temp[2]);
+			var queryData={timestamp:ngaygiao,id:{},giaoviec:{ngaygiao:getDateJSON(ngaygiao),nguoigiao:getPeopleJSON(temp[0]),chutri:getPeopleJSON(temp[1]),thoihan:getDateJSON(thoihan)},duan:temp[3],tinhtrang:"Đang thực hiện",noidung:{tomtat:temp[4],daydu:temp[5]}};
 			
 			logE(queryData);
 			var url=`${appscriptConfig.workUrl}?action=${action}&email=${mainData.user.email}&uid=${mainData.user.uid}&pos=${pos}&unit=${JSON.stringify(queryData)}`;
@@ -776,7 +784,7 @@
 		decompressSheetValues=stringifyInput=>JSON.parse(stringifyInput.replace(/~/g,',""').replace(/`/g,',"'));
 
 		dateShort=(inputDate)=>inputDate.slice(0,inputDate.lastIndexOf('/'));
-		formatDateForId=(date,delimiter)=>mergeStr(date.getFullYear())((1 + date.getMonth()).toString().padStart(2,'0'))(date.getDate().toString().padStart(2,'0'))(delimiter);
+		formatDateForId=(date,delimiter)=>date?mergeStr(date.getFullYear())((1 + date.getMonth()).toString().padStart(2,'0'))(date.getDate().toString().padStart(2,'0'))(delimiter):undefined;
 		formatFormDate=(formDateSplitted,delimiter)=>mergeStr(formDateSplitted[0])(formDateSplitted[1])(formDateSplitted[2])(delimiter);
 		const mergeStr=y=>m=>d=>delimiter=>(delimiter == undefined)?(y + m + d):(typeof delimiter=='string')?d+delimiter+m+delimiter+y:d + '/' + m + '/' + y;
 
@@ -784,7 +792,7 @@
 		lastWord=(word)=>word.slice(word.lastIndexOf(' '));
 
 		getPeopleJSON=(name)=>({hoten:name,ten:nameShort(name),maACV:'',madonvi:mainData.user.madonvi/*TODO: query madonvi user*/})
-		getDateJSON=(dateSlashForm)=>({full:dateSlashForm,short:dateShort(dateSlashForm)})
+		getDateJSON=(dateSlashForm)=>dateSlashForm?{full:dateSlashForm,short:dateShort(dateSlashForm)}:undefined
 
 		//function testMapJsonValue(){mapJsonValue(getJsonKey(),openSheet(workSj).getRange(3,1,1,10).getDisplayValues())}
 		mapJsonValue=(header,values)=>values.map((r)=>r.reduce((l,o,oIdx)=>setValueJson(l,header[oIdx].split('.'),o),{}))
